<resources>
    <string name="app_name">Time Table Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="end_time">End time</string>
    <string name="end_date">End date</string>
    <string name="start_time">Start time</string>
    <string name="start_date">Start date</string>
    <string name="event_title">Event title</string>
    <string name="name_of_organizers">Name of organizers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="confirm">Confirm</string>
    <string name="event_description">Event description</string>
    <string name="venue_of_the_event">venue of the event</string>
    <string name="refresh_time_table">Refresh Time Table</string>
    <string name="edit_event">Edit Event</string>
    <string name="set_alarm_for_the_event">Set alarm before the event?</string>
    <string name="notification_title">Notification title</string>
    <string name="notification_text">What the fuck the notification exists</string>
</resources>