<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditEvent">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/startDateIcon"
                        android:layout_width="@dimen/spacing_mxlarge"
                        android:layout_height="@dimen/spacing_mxlarge"
                        android:layout_marginTop="@dimen/spacing_mlarge"
                        android:layout_marginRight="@dimen/spacing_mlarge"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_calendar"
                        app:tint="@color/grey" />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/startDateText"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_mlarge"
                        android:hint="press me to set start date"
                        android:background="@android:color/transparent" />
                    <ImageView
                        android:id="@+id/startTimeIcon"
                        android:layout_width="@dimen/spacing_mxlarge"
                        android:layout_height="@dimen/spacing_mxlarge"
                        android:layout_marginTop="@dimen/spacing_mlarge"
                        android:layout_marginRight="@dimen/spacing_mlarge"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_time"
                        app:tint="@color/grey" />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/startTimeText"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_mlarge"
                        android:hint="press me to set start time"

                        android:background="@android:color/transparent"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/endDateIcon"
                        android:layout_width="@dimen/spacing_mxlarge"
                        android:layout_height="@dimen/spacing_mxlarge"
                        android:layout_marginTop="@dimen/spacing_mlarge"
                        android:layout_marginRight="@dimen/spacing_mlarge"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_calendar"
                        app:tint="@color/grey" />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/endDateText"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_mlarge"
                        android:hint="press me to set end date"
                        android:background="@android:color/transparent" />
                    <ImageView
                        android:id="@+id/endTimeIcon"
                        android:layout_width="@dimen/spacing_mxlarge"
                        android:layout_height="@dimen/spacing_mxlarge"
                        android:layout_marginTop="@dimen/spacing_mlarge"
                        android:layout_marginRight="@dimen/spacing_mlarge"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_time"
                        app:tint="@color/grey" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/endTimeText"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_mlarge"
                        android:hint="press me to set end time"
                        android:background="@android:color/transparent"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="@dimen/spacing_mxlarge"
                        android:layout_height="@dimen/spacing_mxlarge"
                        android:layout_marginTop="@dimen/spacing_mlarge"
                        android:layout_marginRight="@dimen/spacing_mlarge"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_short_text"
                        app:tint="@color/grey" />
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/eventTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/event_title"
                            android:background="@android:color/transparent"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="@dimen/spacing_mxlarge"
                        android:layout_height="@dimen/spacing_mxlarge"
                        android:layout_marginTop="@dimen/spacing_mlarge"
                        android:layout_marginRight="@dimen/spacing_mlarge"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_person"
                        app:tint="@color/grey" />
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/organizers"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name_of_organizers"
                            android:background="@android:color/transparent"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="@dimen/spacing_mxlarge"
                        android:layout_height="@dimen/spacing_mxlarge"
                        android:layout_marginTop="@dimen/spacing_mlarge"
                        android:layout_marginRight="@dimen/spacing_mlarge"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_location"
                        app:tint="@color/grey" />
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/venueText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/venue_of_the_event"
                            android:background="@android:color/transparent"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="@dimen/spacing_mxlarge"
                        android:layout_height="@dimen/spacing_mxlarge"
                        android:layout_marginTop="@dimen/spacing_mlarge"
                        android:layout_marginRight="@dimen/spacing_mlarge"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_text"
                        app:tint="@color/grey" />
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/eventDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/event_description"
                            android:background="@android:color/transparent"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <Button
                    android:id="@+id/confirmButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm"
                    android:layout_gravity="bottom|end"/>
                <CheckBox
                    android:id="@+id/setAlarm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_alarm_for_the_event" />
                <RadioGroup
                    android:id="@+id/alarmTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/whenEventStart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="When the event starts"
                        android:checked="true"/>
                    <RadioButton
                        android:id="@+id/fifteenMins"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="15 mins before"/>
                    <RadioButton
                        android:id="@+id/thirtyMins"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="30 mins before"/>
                    <RadioButton
                        android:id="@+id/oneHr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="1 hr before"/>

                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</FrameLayout>